iOS and Android Push notification added

--- a/WebApp/Views/SeeDoctor/DoctorProfileView.cshtml
+++ b/WebApp/Views/SeeDoctor/DoctorProfileView.cshtml
@@ -4,17 +4,13 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     </div><!--/.modal header-->
 
-    <div class="modal-body text-left" style="width: 1000px;margin-left: -147px;margin-right: 105px;">
-        <div class="right_col">
-            <div class="clearfix"></div>
+    <div class="modal-body text-left" >
+        <div >
+            
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="x_panel">
-                        <div class="x_title">
-                            <h2>Doctor Profile</h2>
-                            
-                            <div class="clearfix"></div>
-                        </div>
+                       
                         <div class="x_content">
                             <div class="row">
                                 <div class="col-sm-12">
