consultation detail UI

--- a/WebApp/Views/DoctorConsultation/Index.cshtml
+++ b/WebApp/Views/DoctorConsultation/Index.cshtml
@@ -61,8 +61,8 @@
     </div>
     <input type="text" style="display:none" id="pvappid" value="0">
     <div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel4">
-        <div class="modal-dialog" role="document" style="width: 380px;">
-            <div id='myModalContent' class="modal-content" style="border-radius: 0;height:500px;overflow:scroll">
+        <div class="modal-dialog" role="document" style="width: 648px;">
+            <div id='myModalContent' class="modal-content" style="border-radius: 0;">
                 @{
                     Html.RenderAction("ViewDetail", "DoctorConsultation", new { consultID = 0 });
                 }
